fix header text alignment

--- a/1-webfund/css/portfolio/style.css
+++ b/1-webfund/css/portfolio/style.css
@@ -6,6 +6,7 @@ body {
     background: rgb(63,94,251);
     background: radial-gradient(circle, rgba(63,94,251,1) 0%, rgba(252,70,107,1) 100%);
     margin: 0;
+    font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Helvetica, Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol";
 }
 
 #nav {
@@ -14,6 +15,7 @@ body {
     padding: 0%;
     background-color: rgb(255 255 255 / 67%);
     margin: 0% 0% 0% 0%;
+    align-items: center;
 }
 
 #nav-name {
